# rust-text-editor

./: Cargo.toml  LICENSE.md  README.md
queries/: rust.scm
src/: editor.rs  lib.rs  main.rs  mode_manager.rs  syntax.rs  text_buffer.rs
src/client/: editor_client.rs  mod.rs
src/server/: client.rs  editor_server.rs  events.rs  mod.rs  server_client.rs
tests/: client_server_tests.rs  editor_client_tests.rs  editor_integration_tests.rs  terminal_integration_tests.rs
